fix image width overflow

--- a/material/res/tirea.css
+++ b/material/res/tirea.css
@@ -144,6 +144,10 @@ h1, h2, h3, h4, .titlename, .collection-header {
 	padding-bottom: 40px;
 }
 
+#page-content-div img {
+	max-width: 100%;
+}
+
 .navword {
 	font-weight: bold;
 	color: #06619F;
